Article and Badges
+ Article
+ Badges

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -20,6 +20,110 @@ p, a, h1, h4, h5, h6 {
   width: 100%;
 }
 
+.article h1 {
+  font-size: 2rem;
+  color: #363636;
+}
+
+.article h2 {
+  font-size: 1.75rem;
+  color: #363636;
+}
+
+.article h3 {
+  font-size: 1.5rem;
+  color: #363636;
+}
+
+.article h4 {
+  font-size: 1rem;
+  color: #363636;
+}
+
+.article ol {
+  list-style-type: disc;
+}
+
+.badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: whitesmoke;
+  padding: 0.5em 0.75em;
+  font-size: 0.75rem;
+  color: #363636;
+  border-radius: 8px;
+  margin: 0.25em;
+}
+
+.badge.normal {
+  font-size: 0.75rem;
+}
+
+.badge.medium {
+  font-size: 1rem;
+}
+
+.badge.large {
+  font-size: 1.25rem;
+}
+
+.badge.black {
+  background-color: #0a0a0a;
+  color: white;
+}
+
+.badge.dark {
+  background-color: #363636;
+  color: white;
+}
+
+.badge.light {
+  background-color: whitesmoke;
+  color: #363636;
+}
+
+.badge.white {
+  background-color: white;
+  color: #363636;
+}
+
+.badge.primary {
+  background-color: #00d1b2;
+  color: white;
+}
+
+.badge.link {
+  background-color: #3273dc;
+  color: white;
+}
+
+.badge.info {
+  background-color: #209cee;
+  color: white;
+}
+
+.badge.success {
+  background-color: #48c774;
+  color: white;
+}
+
+.badge.warning {
+  background-color: #ffdd57;
+  color: #4a4a4a;
+}
+
+.badge.danger {
+  background-color: #ff3860;
+  color: white;
+}
+
 .input, .textarea {
   width: 100%;
   height: 4em;
@@ -176,7 +280,7 @@ p, a, h1, h4, h5, h6 {
 
 .button.white {
   background-color: white;
-  color: #0a0a0a;
+  color: #363636;
 }
 
 .button.light {
