--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -53,6 +53,113 @@ p, a, h1, h4, h5, h6 {
     width: 100%;
 }
 
+// Article
+
+.article {
+
+    h1 {
+        font-size: 2rem;
+        color: $grey-darker;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+        color: $grey-darker;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+        color: $grey-darker;
+    }
+
+    h4 {
+        font-size: 1rem;
+        color: $grey-darker;
+    }
+
+    ol {
+        list-style-type: disc;
+    }
+}
+
+// Badges
+
+.badge {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $white-ter;
+    padding: 0.5em 0.75em;
+    font-size: 0.75rem;
+    color: $grey-darker;
+    border-radius: $border-radius-level-2;
+    margin: 0.25em;
+
+    // Element sizes
+    &.normal {
+        font-size: 0.75rem;
+    }
+
+    &.medium {
+        font-size: 1rem;
+    }
+
+    &.large {
+        font-size: 1.25rem;
+    }
+
+    // Element colors
+    &.black {
+        background-color: $black;
+        color: $white;
+    }
+
+    &.dark {
+        background-color: $grey-darker;
+        color: $white;
+    }
+
+    &.light {
+        background-color: $white-ter;
+        color: $grey-darker;
+    }
+
+    &.white {
+        background-color: $white;
+        color: $grey-darker;
+    }
+
+    &.primary {
+        background-color: $primary;
+        color: $white;
+    }
+
+    &.link {
+        background-color: $link;
+        color: $white;
+    }
+
+    &.info {
+        background-color: $info;
+        color: $white;
+    }
+
+    &.success {
+        background-color: $success;
+        color: $white;
+    }
+
+    &.warning {
+        background-color: $warning;
+        color: $grey-dark;
+    }
+
+    &.danger {
+        background-color: $danger;
+        color: $white;
+    }
+}
+
 // Forms
 .input, .textarea {
     width: 100%;
@@ -177,7 +284,6 @@ p, a, h1, h4, h5, h6 {
     }
 
     // Element colors
-
     &.primary {
         background-color: $primary;
     }
@@ -205,7 +311,7 @@ p, a, h1, h4, h5, h6 {
 
     &.white {
         background-color: $white;
-        color: $black;
+        color: $grey-darker;
     }
 
     &.light {
