--- a/style/css/style.css
+++ b/style/css/style.css
@@ -303,6 +303,51 @@ p, a, h1, h4, h5, h6 {
   background-color: #0a0a0a;
 }
 
+.progress {
+  width: 100%;
+  height: 1em;
+  background-color: whitesmoke;
+  border-radius: 16px;
+}
+
+.progress .bar {
+  height: 100%;
+  background-color: #7a7a7a;
+  border-radius: 16px;
+}
+
+.progress .bar.primary {
+  background-color: #00d1b2;
+}
+
+.progress .bar.link {
+  background-color: #3273dc;
+}
+
+.progress .bar.info {
+  background-color: #209cee;
+}
+
+.progress .bar.success {
+  background-color: #48c774;
+}
+
+.progress .bar.warning {
+  background-color: #ffdd57;
+}
+
+.progress .bar.danger {
+  background-color: #ff3860;
+}
+
+.progress .bar.dark {
+  background-color: #363636;
+}
+
+.progress .bar.black {
+  background-color: #0a0a0a;
+}
+
 .size-1 {
   font-size: 3rem;
 }
