--- a/style/css/style.css
+++ b/style/css/style.css
@@ -16,10 +16,6 @@ p, a, h1, h4, h5, h6 {
   color: #363636;
 }
 
-.box {
-  width: 100%;
-}
-
 .article h1 {
   font-size: 2rem;
   color: #363636;
@@ -40,11 +36,8 @@ p, a, h1, h4, h5, h6 {
   color: #363636;
 }
 
-.article ol {
-  list-style-type: disc;
-}
-
 .badge {
+  width: 4em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
