--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap');
 
 // Fonts
-$font: 'Quicksand', sans-serif; //Arial, Helvetica, sans-serif;
+$font: 'Quicksand', sans-serif;
 
 // Colors
 $primary: hsl(171, 100%, 41%);
@@ -106,6 +106,7 @@ a {
 
 // Header
 .header {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -244,6 +245,7 @@ a {
     color: $grey;
     font-size: 1rem;
     font-family: $font;
+    font-weight: 500;
 
     transition: 50ms all;
 
@@ -487,6 +489,7 @@ a {
     background-color: $white-ter;
     padding: 1.5em;
     border-radius: $border-radius-level-2;
+    font-weight: 500;
 
     // Element colors
     &.primary {
@@ -879,7 +882,6 @@ a {
 .border-radius-6 { border-radius: $border-radius-level-6; }
 
 // Index
-
 .z-index-1 { z-index: 1; }
 .z-index-2 { z-index: 2; }
 .z-index-3 { z-index: 3; }
@@ -888,3 +890,8 @@ a {
 .z-index-7 { z-index: 6; }
 .z-index-8 { z-index: 7; }
 .z-index-9 { z-index: 8; }
+
+// Position
+.fixed {
+    position: fixed;
+}
