--- a/style/css/style.css
+++ b/style/css/style.css
@@ -71,6 +71,16 @@ a.hover-button:hover {
   padding: 1.5em 4.5em;
 }
 
+.header .logo {
+  cursor: pointer;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+.header .logo:hover {
+  opacity: 0.8;
+}
+
 .header p.logo {
   font-size: 1.5rem;
   font-weight: 700;
@@ -99,6 +109,7 @@ a.hover-button:hover {
 
 .header nav ul li a:hover:not(.button), .header nav ol li a:hover:not(.button) {
   background-color: whitesmoke;
+  color: #00d1b2;
 }
 
 .header nav ul li a.button:hover, .header nav ul li a.button:focus, .header nav ol li a.button:hover, .header nav ol li a.button:focus {
@@ -1860,4 +1871,156 @@ a.hover-button:hover {
 
 .fixed {
   position: fixed;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.cursor-default {
+  cursor: default;
+}
+
+.cursor-crosshair {
+  cursor: crosshair;
+}
+
+.cursor-help {
+  cursor: help;
+}
+
+.cursor-move {
+  cursor: move;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-progress {
+  cursor: progress;
+}
+
+.cursor-text {
+  cursor: text;
+}
+
+.cursor-wait {
+  cursor: wait;
+}
+
+.cursor-cell {
+  cursor: cell;
+}
+
+.cursor-nw-resize {
+  cursor: nw-resize;
+}
+
+.cursor-n-resize {
+  cursor: n-resize;
+}
+
+.cursor-ne-resize {
+  cursor: ne-resize;
+}
+
+.cursor-copy {
+  cursor: copy;
+}
+
+.cursor-no-drop {
+  cursor: no-drop;
+}
+
+.cursor-vertical-text {
+  cursor: vertical-text;
+}
+
+.cursor-alias {
+  cursor: alias;
+}
+
+.cursor-w-resize {
+  cursor: w-resize;
+}
+
+.cursor-none {
+  cursor: none;
+}
+
+.cursor-e-resize {
+  cursor: e-resize;
+}
+
+.cursor-context-menu {
+  cursor: context-menu;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
+.cursor-nesw-resize {
+  cursor: nesw-resize;
+}
+
+.cursor-nwse-resize {
+  cursor: nwse-resize;
+}
+
+.cursor-sw-resize {
+  cursor: sw-resize;
+}
+
+.cursor-s-resize {
+  cursor: s-resize;
+}
+
+.cursor-se-resize {
+  cursor: se-resize;
+}
+
+.cursor-ew-resize {
+  cursor: ew-resize;
+}
+
+.cursor-ns-resize {
+  cursor: ns-resize;
+}
+
+.cursor-row-resize {
+  cursor: row-resize;
+}
+
+.cursor-coll-resize {
+  cursor: col-resize;
+}
+
+.cursor-all-scroll {
+  cursor: all-scroll;
+}
+
+.cursor-zoom-in {
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
+
+.cursor-zoom-out {
+  cursor: -webkit-zoom-out;
+  cursor: zoom-out;
+}
+
+.cursor-grab {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.cursor-grabbing {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
 }
