--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -112,6 +112,16 @@ a {
     justify-content: space-between;
     padding: 1.5em 4.5em;
 
+    .logo {
+        cursor: pointer;
+
+        transition: all 200ms;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
     p {
         &.logo {
             font-size: 1.5rem;
@@ -143,6 +153,7 @@ a {
 
                     &:hover:not(.button) {
                         background-color: $white-ter;
+                        color: $primary;
                     }
 
                     &.button {
@@ -892,6 +903,43 @@ a {
 .z-index-9 { z-index: 8; }
 
 // Position
-.fixed {
-    position: fixed;
-}
+.fixed { position: fixed; }
+.relative { position: relative; }
+.absolute { position: absolute; }
+
+// Cursor
+.cursor-default { cursor: default; }
+.cursor-crosshair { cursor: crosshair; }
+.cursor-help { cursor: help; }
+.cursor-move { cursor: move; }
+.cursor-pointer { cursor: pointer; }
+.cursor-progress { cursor: progress; }
+.cursor-text { cursor: text; }
+.cursor-wait { cursor: wait; }
+.cursor-cell { cursor: cell; }
+.cursor-nw-resize { cursor: nw-resize; }
+.cursor-n-resize { cursor: n-resize; }
+.cursor-ne-resize { cursor: ne-resize; }
+.cursor-copy { cursor: copy; }
+.cursor-no-drop { cursor: no-drop; }
+.cursor-vertical-text { cursor: vertical-text; }
+.cursor-alias { cursor: alias; }
+.cursor-w-resize { cursor: w-resize; }
+.cursor-none { cursor: none; }
+.cursor-e-resize { cursor: e-resize; }
+.cursor-context-menu { cursor: context-menu; }
+.cursor-not-allowed { cursor: not-allowed; }
+.cursor-nesw-resize { cursor: nesw-resize; }
+.cursor-nwse-resize { cursor: nwse-resize; }
+.cursor-sw-resize { cursor: sw-resize; }
+.cursor-s-resize { cursor: s-resize; }
+.cursor-se-resize { cursor: se-resize; }
+.cursor-ew-resize { cursor: ew-resize; }
+.cursor-ns-resize { cursor: ns-resize; }
+.cursor-row-resize { cursor: row-resize; }
+.cursor-coll-resize { cursor: col-resize; }
+.cursor-all-scroll { cursor: all-scroll; }
+.cursor-zoom-in { cursor: zoom-in; }
+.cursor-zoom-out { cursor: zoom-out; }
+.cursor-grab { cursor: grab; }
+.cursor-grabbing { cursor: grabbing; }
