--- a/style/css/style.css
+++ b/style/css/style.css
@@ -20,7 +20,7 @@ body {
   min-height: 100vh;
 }
 
-p, a, h1, h4, h5, h6 {
+p, a, li, h1, h4, h5, h6 {
   font-size: 1rem;
   color: #363636;
 }
@@ -35,6 +35,11 @@ a.hover-underline:hover {
 
 a.hover-button:hover {
   background-color: whitesmoke;
+}
+
+.article {
+  width: 100%;
+  text-align: justify;
 }
 
 .article h1 {
@@ -55,6 +60,27 @@ a.hover-button:hover {
 .article h4 {
   font-size: 1rem;
   color: #363636;
+}
+
+.article ul, .article ol {
+  margin: 1em 0 1em 2em;
+}
+
+.article a {
+  text-decoration: underline;
+  color: #3273dc;
+  font-weight: 500;
+}
+
+.article img {
+  width: 40%;
+  display: block;
+  margin: 2em auto;
+}
+
+.article p.image {
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 .header {
