--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -58,7 +58,7 @@ body {
 }
 
 // Text
-p, a, h1, h4, h5, h6 {
+p, a, li, h1, h4, h5, h6 {
     font-size: 1rem;
     color: $grey-darker;
 }
@@ -83,6 +83,9 @@ a {
 
 // Article
 .article {
+    width: 100%;
+    text-align: justify;
+
     h1 {
         font-size: 2rem;
         color: $grey-darker;
@@ -101,6 +104,29 @@ a {
     h4 {
         font-size: 1rem;
         color: $grey-darker;
+    }
+
+    ul, ol {
+        margin: 1em 0 1em 2em;
+    }
+
+    a {
+        text-decoration: underline;
+        color: $link;
+        font-weight: 500;
+    }
+
+    img {
+        width: 40%;
+        display: block;
+        margin: 2em auto;
+    }
+
+    p {
+        &.image {
+            text-align: center;
+            margin-bottom: 2em;
+        }
     }
 }
 
