--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -35,8 +35,6 @@ $border-radius-level-6: 100%;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    top: 0;
-    left: 0;
 }
 
 html {
@@ -58,7 +56,7 @@ body {
 }
 
 // Text
-p, a, li, h1, h4, h5, h6 {
+p, a, li, h1, h2, h3, h4, h5, h6 {
     font-size: 1rem;
     color: $grey-darker;
 }
@@ -137,6 +135,11 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 1.5em 4.5em;
+
+    &.sticky {
+        position: fixed;
+        z-index: 100;
+    }
 
     .logo {
         display: flex;
@@ -934,6 +937,10 @@ a {
 .fixed { position: fixed; }
 .relative { position: relative; }
 .absolute { position: absolute; }
+.top-0 { top: 0; }
+.right-0 { right: 0; }
+.left-0 { left: 0; }
+.bottom-0 { bottom: 0; }
 
 // Cursor
 .cursor-default { cursor: default; }
