--- a/style/css/style.css
+++ b/style/css/style.css
@@ -163,12 +163,18 @@ a.hover-button:hover {
           filter: brightness(95%);
 }
 
-.header .menu {
+.header .mobile {
   display: none;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 
-.header .menu:hover {
-  opacity: 0.8;
+.header .mobile:hover {
+  opacity: 0.6;
+}
+
+.header .mobile-menu {
+  display: none;
 }
 
 .badge {
@@ -2138,7 +2144,7 @@ a.hover-button:hover {
   .header nav {
     display: none;
   }
-  .header .menu {
+  .header .mobile {
     display: block;
   }
 }
